beef: TEST COMMIT SQUASH ME

--- a/beef/Dockerfile
+++ b/beef/Dockerfile
@@ -36,6 +36,8 @@ ENV LANG=en_US.UTF-8
 ENV LANGUAGE=en_US.UTF-8
 ENV LC_ALL=en_US.UTF-8
 
+RUN pwd && ls -lah
+
 RUN mkdir -p /opt/beef && \
 	chmod 777 /opt/beef
 WORKDIR /opt/beef
@@ -56,8 +58,8 @@ RUN sed -e '/get_permission$/s/^/#/' -i update-geoipdb
 RUN ./update-geoipdb
 
 EXPOSE 3000 4567 6789
-RUN pwd && ls -lah
-COPY ./entrypoint.sh /opt/beef
+RUN whoami && pwd && ls -lah
+COPY entrypoint.sh /opt/beef
 RUN chmod a+x /opt/beef/entrypoint.sh
 
 
