--- a/beef/Dockerfile
+++ b/beef/Dockerfile
@@ -36,8 +36,6 @@ ENV LANG=en_US.UTF-8
 ENV LANGUAGE=en_US.UTF-8
 ENV LC_ALL=en_US.UTF-8
 
-RUN pwd && ls -lah
-
 RUN mkdir -p /opt/beef && \
 	chmod 777 /opt/beef
 WORKDIR /opt/beef
@@ -58,8 +56,7 @@ RUN sed -e '/get_permission$/s/^/#/' -i update-geoipdb
 RUN ./update-geoipdb
 
 EXPOSE 3000 4567 6789
-RUN whoami && pwd && ls -lah
-COPY entrypoint.sh /opt/beef
+COPY entrypoint.sh /opt/beef/entrypoint.sh
 RUN chmod a+x /opt/beef/entrypoint.sh
 
 
