--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -7,6 +7,7 @@ steps:
   - '-c'
   - |-
     # Get list of directories to loop over
+    array=(*/)
     for dir in "${array[@]}"; do
         echo "$dir"
     done
