testing: more cloud build testing

--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -9,7 +9,9 @@ steps:
   - |-
     # Get list of directories to loop over
     array=(*/)
+    dir_count = 0
     for dir in "${array[@]}"; do
+        echo "Building $dir_count/${#array[@]}"
         # test for md5sum
         md5sum $dirDockerfile | cut -d ' ' -f1
         dockerfile_md5 = $(md5sum $dirDockerfile | cut -d ' ' -f1)
