testing: more cloud build testing

--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -12,7 +12,7 @@ steps:
     dir_count=1
     for dir in "${array[@]}"; do
         echo "Building $dir_count/${#array[@]}"
-        toolname=$dir[:-1]
+        toolname=${dir:P:((L-1))}
         dockerfile_dir="$(echo $dir)Dockerfile"
         dockerfile_md5=$(md5sum ${dir}Dockerfile | cut -d ' ' -f1)
         echo "Checking for existing image for tool: $dir with Dockerfile md5 hash of: $dockerfile_md5"
