--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -17,10 +17,11 @@ steps:
         dockerfile_dir="$(echo $dir)Dockerfile"
         dockerfile_md5=$(md5sum ${dir}Dockerfile | cut -d ' ' -f1)
 
-        echo "Checking for existing image for tool: $dir with Dockerfile md5 hash of: $dockerfile_md5"
-        echo "Toolname: $toolname"
+        echo "Checking for existing image for tool: $toolname with Dockerfile md5 hash of: $dockerfile_md5"
         existing_tags=$(gcloud container images list-tags --filter="tags:$dockerfile_md5" --format=json gcr.io/$PROJECT_ID/$toolname)
-        echo "Existing tags: $existing_tags"
+        if [ $(cat existing_tags | wc -c) -eq 2 ]; then
+            echo "Empty return because 2 characters = [] (big assumption)"
+        fi
 
         # Increment counter
         ((dir_count=dir_count+1))
