--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -21,7 +21,7 @@ steps:
         existing_tags=$(gcloud container images list-tags --filter="tags:$dockerfile_md5" --format=json gcr.io/$PROJECT_ID/$toolname)
         is_existing_tags_empty=$(echo "$existing_tags" | wc -c)
         echo "test: $is_existing_tags_empty"
-        if [ $is_existing_tags_empty -eq 2 ]; then
+        if [ $is_existing_tags_empty -lt 4 ]; then
             echo "Empty return because 2 characters = [] (big assumption)"
         fi
 
