TESTING: Trying bash parallelism to speed up build

--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -30,7 +30,8 @@ steps:
         # Only build if the tag does not equal the md5sum of the current Dockerfile
         if [ "existing_tags" == "[]" ]; then
             # Enqueue this directory for a worker to build
-            echo $toolname >>myqueue <<EOF
+            #echo $toolname >>myqueue <<EOF
+            echo $toolname >>myqueue
         elif
             echo "Skipping build of $toolname: Image from this Dockerfile already exists in repo. https://gcr.io/$PROJECT_ID/$toolname"
         fi
