--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -41,7 +41,7 @@ steps:
 
     # stop the workers when they are completed
     while [ $(bash pool.sh status; echo $?) -gt 0 ]; do
-        sleep(10)
+        sleep 10
     done
     bash pool.sh stop
 
